# IICPC

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  go.work  go.work.sum
.github/workflows/: ci.yml
.kiro/specs/distributed-benchmarking-platform/: design.md  requirements.md
docs/: index.html
docs/specs/distributed-benchmarking-platform/: .config.kiro  tasks.md
libs/rme/: Cargo.toml
libs/rme/src/: lib.rs  matching.rs  order_book.rs
libs/shared-go/: go.mod
libs/shared-go/logger/: logger.go
libs/shared-go/redis/: keys.go
libs/shared-go/types/: status.go
migrations/postgres/: V1__create_contestants.sql  V2__create_submissions.sql  V3__create_benchmark_runs.sql
migrations/timescaledb/: V1__create_telemetry_hypertables.sql
schemas/telemetry/: fill_event.avsc  telemetry_event.avsc
services/bot-fleet-manager/: Dockerfile  go.mod  go.sum  main.go
services/build-pipeline/: Dockerfile  go.mod  main.go
services/build-pipeline/manifests/: build-job-network-policy.yaml
services/control-plane-api/: Dockerfile  go.mod  go.sum  main.go
services/leaderboard-frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
services/leaderboard-frontend/src/: App.css  App.tsx  main.tsx
services/leaderboard-service/: Dockerfile  go.mod  go.sum  main.go
services/sandbox-controller/: Dockerfile  go.mod  go.sum  main.go
services/submission-engine/: Dockerfile  go.mod  go.sum  main.go
services/telemetry-ingester/: Dockerfile  go.mod  go.sum  main.go
tools/seed/: go.mod  main.go
(+119 files in other folders)
